--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,8 @@ Boards/Resultado1.csv
 Boards/Resultado2.csv
 Boards/ResultadoMaestros.csv
 cmake-build-debug/Testing/Temporary/LastTest.log
+Boards/Resultado1.csv
+Boards/ResultadoMaestros.csv
+cmake-build-debug/.ninja_deps
+cmake-build-debug/.ninja_log
+cmake-build-debug/Testing/Temporary/LastTest.log
