Separando clase coordenadas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,6 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(Tesoro main.cpp
         Board.cpp
         Board.h
+        Coordinate.cpp
+        Coordinate.h
 )
