--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ Boards/ResultadoMaestros.csv
 cmake-build-debug/.ninja_deps
 cmake-build-debug/.ninja_log
 cmake-build-debug/Testing/Temporary/LastTest.log
+*.log
+cmake-build-debug/Testing/Temporary/LastTest.log
+cmake-build-debug/.ninja_log
+cmake-build-debug/.ninja_deps
+Boards/ResultadoMaestros.csv
+Boards/Resultado2.csv
+Boards/Resultado1.csv
