--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ cmake-build-debug/.ninja_deps
 Boards/ResultadoMaestros.csv
 Boards/Resultado2.csv
 Boards/Resultado1.csv
+cmake-build-debug/Testing/Temporary/LastTest.log
+Boards/ResultadoMaestros.csv
+Boards/Resultado2.csv
+Boards/Resultado1.csv
