--- a/.gitignore
+++ b/.gitignore
@@ -30,23 +30,13 @@
 *.exe
 *.out
 *.app
-Boards/Resultado1.csv
-Boards/Resultado2.csv
-Boards/ResultadoMaestros.csv
+Boards/*
 cmake-build-debug/Testing/Temporary/LastTest.log
-Boards/Resultado1.csv
-Boards/ResultadoMaestros.csv
 cmake-build-debug/.ninja_deps
 cmake-build-debug/.ninja_log
-cmake-build-debug/Testing/Temporary/LastTest.log
+cmake-build-debug/Testing/Temporary/*
 *.log
 cmake-build-debug/Testing/Temporary/LastTest.log
 cmake-build-debug/.ninja_log
 cmake-build-debug/.ninja_deps
-Boards/ResultadoMaestros.csv
-Boards/Resultado2.csv
-Boards/Resultado1.csv
 cmake-build-debug/Testing/Temporary/LastTest.log
-Boards/ResultadoMaestros.csv
-Boards/Resultado2.csv
-Boards/Resultado1.csv
